# AI-Agent-Hub

./: .dockerignore  .env  .env.example  LICENSE  README.md
api/: pyproject.toml
api/ai_agent_hub_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/app/: config.py  deps.py  main.py
api/app/models/: schemas.py
api/app/rag/: embed.py  ingest.py  search.py
api/app/tests/: test_health.py  test_retrieve.py
docker/: api.Dockerfile
docs/: architecture.txt  cloud_deploy.txt  ingestion_guide.txt  mcp_overview.txt  mlflow_tracking.txt  project_overview.txt  rag_pipeline.txt  shutdown_guide.txt  startup_overview.txt  troubleshooting.txt
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css
ui/src/components/: Chat.tsx  Sources.tsx
ui/src/lib/: api.ts
