[project]
name = "ai-agent-hub-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "sse-starlette>=2.1.0",
  "qdrant-client>=1.10.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26",
  "python-dotenv>=1.0.1",
  "tenacity>=8.3.0",        # resilient retries (Qdrant/LLM)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "types-requests",
]

[tool.ruff]
select = ["E","F","I","UP","B","SIM"]
line-length = 100

[tool.black]
line-length = 100
